--- a/README
+++ b/README
@@ -8,7 +8,7 @@ Its main original feature is to be able to incrementally rebuild
 dependencies only for files that have been touched since the last
 mkdep execution.
 
-Other features include the ablilities to generate dependency rules for
+Other features include the abilities to generate dependency rules for
 libraries or for objects files stored in a separate directory, and to
 apply some transforms on the name of included files, for example to
 use a make variable to hold a common prefix for included files. 
