--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,6 @@
 mkdep 2.4 Released 29 august 2005
 
+ 11. Fix packing list (compatibility sources where omitted).
  10. Update to autoconf 2.59.
   9. /usr/lib/gcc/ contains system includes in some recent Linux distros. 
      Ignore its contents too when ignoring system includes.
