--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+mkdep 2.7 Released 05 october 2007
+
+ 18. Gcc 4.2 adds <command-line> (with a dash) in dependencies
  17. Switch to automake.
 
 mkdep 2.6 Released 22 december 2006
